--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.show-sql = true
 
-spring.datasource.url = jdbc:mysql://localhost:3306/backend
-spring.datasource.username = admin
-spring.datasource.password = password
+#spring.datasource.url = jdbc:mysql://localhost:3306/backend
+#spring.datasource.username = admin
+#spring.datasource.password = password
 
