--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 
-spring.datasource.url = jdbc:${{MySQL.MYSQL_PRIVATE_URL}}
-spring.datasource.username = ${{MySQL.MYSQLUSER}}
-spring.datasource.password = ${{MySQL.MYSQLPASSWORD}}
-
-#spring.datasource.url = jdbc:mysql://localhost:3306/backend
-#spring.datasource.username = admin
-#spring.datasource.password = password
+spring.datasource.url = jdbc:mysql://monorail.proxy.rlwy.net:40534/railway
+spring.datasource.username = root
+spring.datasource.password = 2fB5BFA5CAEf6f1GEEe33GdAC3Ghghbf
