--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 
-spring.datasource.url = jdbc:mysql://monorail.proxy.rlwy.net:40534/railway
+spring.datasource.url = jdbc:mysql://viaduct.proxy.rlwy.net:15387/railway
 spring.datasource.username = root
-spring.datasource.password = 2fB5BFA5CAEf6f1GEEe33GdAC3Ghghbf
+spring.datasource.password = 4gag-1G3eaHaCb3ADDbcgGGfCcB2GB63
