--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 
-spring.datasource.url = jdbc:mysql://viaduct.proxy.rlwy.net:15387/railway
-spring.datasource.username = root
-spring.datasource.password = 4gag-1G3eaHaCb3ADDbcgGGfCcB2GB63
+spring.datasource.url = jdbc:postgresql://dpg-cpdqumv109ks73em2do0-a:5432/idra_db
+spring.datasource.username = idra_user
+spring.datasource.password = 48vPOJV6zRF0naIr4AIjCotrG3MPgHtLM
